# libgdiplus

./: .gitlab-ci.yml  .gitmodules  Makefile.am  README.md  configure.ac  env_debug  env_dump  glib-2.0.pc
src/: cairo-private-tee.c  cairo-private-tee.h  font.c  fontcollection-private.h  graphics.c  harfbuzz-private-2.h  harfbuzz-private-lang.h  harfbuzz-private.h  text-cairo-private.h  text-cairo.c  text-pango.c
tests/: testtiffcodec.c
